# Calute

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  hatch_build.py  human_being_discoveries_scope.md  pre_commit.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
calute/: __init__.py  calute.py  chain_module.py  client.py  config.py  executors.py  logging_config.py  loggings.py  memory.py  multimodal.py  streamer_buffer.py  utils.py  workflow.py
calute/agents/: __init__.py  _coder_agent.py  _data_analyst_agent.py  _planner_agent.py  _researcher_agent.py  auto_compact_agent.py  compaction_agent.py  definitions.py  subagent_manager.py
calute/api_server/: __init__.py  completion_service.py  converters.py  cortex_completion_service.py  models.py  routers.py  server.py
calute/audit/: __init__.py  collector.py  events.py
calute/context/: __init__.py  compaction_strategies.py  token_counter.py
calute/context_management/: __init__.py  compaction_strategies.py  token_counter.py
calute/core/: __init__.py  config.py  utils.py
calute/cortex/: __init__.py  agent.py  cortex.py  dynamic.py  enums.py  memory_integration.py  planner.py  string_utils.py  task.py  task_creator.py  templates.py  tool.py  tools.py  universal_agent.py
calute/extensions/: plugins.py
calute/llms/: __init__.py  anthropic.py  base.py  compat.py  gemini.py  ollama.py  openai.py  registry.py
calute/logging/: console.py  structured.py
calute/mcp/: client.py  integration.py  manager.py  types.py
calute/memory/: __init__.py  base.py  compat.py  contextual_memory.py  entity_memory.py  long_term_memory.py  short_term_memory.py  storage.py  user_memory.py
calute/operators/: __init__.py  browser.py  state.py  subagents.py  types.py  user_prompt.py
calute/runtime/: __init__.py  bootstrap.py  bridge.py  context.py  execution_registry.py  features.py  history.py  parity_audit.py  query_engine.py  session.py  tool_pool.py
calute/security/: policy.py
calute/session/: __init__.py  replay.py  store.py
calute/streaming/: __init__.py  events.py  loop.py  messages.py  permissions.py
calute/tools/: __init__.py  ai_tools.py  claude_tools.py  coding_tools.py  data_tools.py  duckduckgo_engine.py  math_tools.py  memory_tool.py  standalone.py  system_tools.py  web_tools.py
docs/: api-reference.md  changelog.md  code-standards.md  codebase-summary.md  conf.py  configuration-guide.md  contributing.rst  deployment-guide.md  design-guidelines.md  openclaw_parity.md  project-overview-pdr.md  requirements.txt  system-architecture.md  testing-guide.md
examples/: cortex_deepsearch_agent.py  cortex_parallel_benchmark.py  deepsearch_agent_demo.py  interactive_agent.py  openclaw_capabilities_demo.py  scenario_1_conversational_assistant.py  scenario_2_code_analyzer.py  scenario_3_multi_agent_collaboration.py  scenario_4_streaming_research_assistant.py  textual_tui.py
scripts/: eval_terminal_profile.py  format_and_generate_docs.py  install.sh  test_system_prompts.py  test_system_prompts_v2.py
src/rust/calute-cli/: Cargo.toml
src/rust/calute-cli/src/: app.rs  bridge.rs  diff.rs  events.rs  input.rs  main.rs  markdown.rs  render.rs  slash.rs  spinner.rs  theme.rs
src/rust/xerxes-cli/: Cargo.toml
src/rust/xerxes-cli/src/: app.rs  bridge.rs  diff.rs  events.rs  input.rs  main.rs  markdown.rs  render.rs  slash.rs  spinner.rs  theme.rs
tests/: __init__.py  conftest.py  test_agent_meta_tools.py  test_agent_types.py  test_ai_tools.py  test_api_server.py  test_audit.py  test_audit_events.py  test_basics.py  test_browser_tools.py  test_channel_adapters.py  test_channels_framework.py  test_circuit_breaker.py  test_cli.py  test_coding_tools.py  test_compaction_strategies.py  test_config.py  test_converters.py  test_cortex_memory.py  test_cortex_task.py  test_cortex_tool.py  test_cortex_utils.py  test_data_tools.py  test_dependency.py  test_embedders.py  test_entity_memory.py  test_errors.py  test_executors.py  test_executors_detailed.py  test_fallback.py  test_gateway_auth.py  test_google_search.py  test_home_assistant_tools.py  test_hooks.py  test_hybrid_retrieval.py  test_llm_base.py  test_logging_config.py  test_loggings.py  test_loop_detection.py  test_math_tools.py  (+54 more)
(+998 files in other folders)
