[tool.poetry]
name = "calute"
version = "0.0.11"
description = "Agents for intelligence and coordination"
authors = ["Erfan Zare Chavoshi <Erfanzare810@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/erfanzar/Calute"
repository = "https://github.com/erfanzar/Calute"
documentation = "https://erfanzar.github.io/Calute"
keywords = ["calute", "Agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = "^2.9.2"
openai = ">=1.72.0"
google-generativeai = "~0.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"calute" = ["py.typed"]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true


[tool.ruff]
line-length = 121
target-version = "py310"


[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "NPY", "RUF", "UP", "W"]
ignore = ["F722", "B008", "UP015", "A005"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.10"

ignore_missing_imports = true
exclude = ["calute/"]

[tool.basedpyright]
# Disabled diagnostic rules to reduce type-checking noise
reportAssignmentType = "none"
reportUnknownVariableType = "none"
reportPrivateUsage = "none"
reportOptionalCall = "none"
reportUnknownMemberType = "none"
reportGeneralTypeIssues = "none"
reportArgumentType = "none"                  # Added to disable argument type warnings
enableTypeIgnoreComments = true              # Ensures # pyright: ignore comments work
reportMissingTypeArgument = "none"
reportUnknownParameterType = "none"
reportAny = "none"
reportCallIssue = "none"
reportUnknownArgumentType = "none"
reportRedeclaration = "none"
reportIgnoreCommentWithoutRule = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportUnknownLambdaType = "none"
reportUnannotatedClassAttribute = "none"
reportImplicitStringConcatenation = "none"
reportMissingParameterType = "none"
reportImplicitOverride = "none"
reportImplicitAbstractClass = "none"
reportExplicitAny = "none"
reportIncompatibleMethodOverride = "none"
reportIndexIssue = "none"
reportAttributeAccessIssue = "none"
reportUnreachable = "none"
reportOptionalMemberAccess = "none"
reportOperatorIssue = "none"
reportUninitializedInstanceVariable = "none"
reportIncompatibleVariableOverride = "none"
[tool.poetry.dev-dependencies]


pytest = "^8.3.3" # For testing
ruff = "^0.7.0"   # Ensure Ruff version is recent
black = "^24.8.0" # Ensure Black version is recent
mypy = "^1.12.0"  # Ensure MyPy version is recents
