[package]
name = "xerxes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Xerxes CLI — agent terminal"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
crossterm = { version = "0.28", features = ["bracketed-paste", "event-stream"] }
ratatui = "0.29"
pulldown-cmark = "0.12"
unicode-width = "0.2"
textwrap = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "xerxes"
path = "src/main.rs"
